--- a/.github/azure-deploy.yml
+++ b/.github/azure-deploy.yml
@@ -6,20 +6,20 @@ on:
       - main
   workflow_dispatch:
 
-jobs:
-  deploy-bicep:
-    runs-on: ubuntu-latest
+# jobs:
+#   deploy-bicep:
+#     runs-on: ubuntu-latest
 
-    steps:
-    - name: checkout repo
-      uses: actions/checkout@v4
+#     steps:
+#     - name: checkout repo
+#       uses: actions/checkout@v4
     
-    - name: login to azure
-    uses: azure/login@v1
-    with:
-      client-id: ${{ secrets.AZURE_CLIENT_ID }}
-      tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-      subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+#     - name: login to azure
+#     uses: azure/login@v1
+#     with:
+#       client-id: ${{ secrets.AZURE_CLIENT_ID }}
+#       tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+#       subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
       
 
     # - name: Deploy Bicep template
