--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -25,14 +25,13 @@ jobs:
         tenant-id: ${{ secrets.AZURE_TENANT_ID }}
         subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
         
-
-    # - name: Deploy Bicep template
-    #   uses: azure/arm-deploy@v0
-    #   with:
-    #     scope: resourcegroup
-    #     resourceGroupName: ${{ secrets.AZURE_RESOURCE_GROUP }}  # Define in GitHub secrets
-    #     template: ./bicep/environments/vnet.bicep               # Path to your Bicep file
-    #     parameters: |
-    #       vnetName=sandbox-dev
-    #       location=East US
-    #     deploymentName: vnet-deployment
+    - name: Deploy Bicep template
+      uses: azure/arm-deploy@v1
+      with:
+        scope: resourcegroup
+        resourceGroupName: 'rg-sandbox-dev'
+        template: ./bicep/environments/vnet.bicep
+        parameters: |
+          vnetName=sandbox-dev
+          location=EastUS
+        deploymentName: vnet-deployment
