deploy storage now

--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -14,10 +14,6 @@ jobs:
   deploy-bicep:
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        bicep_templates: [vnet.bicep, vnet.storage]
-
     steps:
     - name: checkout repo
       uses: actions/checkout@v4
@@ -34,5 +30,5 @@ jobs:
       with:
         scope: resourcegroup
         resourceGroupName: 'rg-sandbox-dev'
-        template: ./bicep/environments/${{ matrix.bicep_template }}
-        deploymentName: ${{ matrix.bicep_template }}-deployment
+        template: ./bicep/environments/storage.bicep
+        deploymentName: vnet-deployment
