--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -26,6 +26,7 @@ jobs:
         subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
         
     - name: Deploy Bicep template
+      if: false
       uses: azure/arm-deploy@v1
       with:
         scope: resourcegroup
@@ -33,4 +34,12 @@ jobs:
         template: ./bicep/environments/keyvault.bicep
         parameters: |
             tenantId=${{ secrets.AZURE_TENANT_ID }}
+        deploymentName: vnet-deployment
+
+    - name: Deploy container app
+      uses: azure/arm-deploy@v1
+      with:
+        scope: resourcegroup
+        resourceGroupName: 'rg-sandbox-dev'
+        template: ./bicep/environments/containerApp.bicep
         deploymentName: vnet-deployment
